Configure React app for deployment to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "-",
+  "homepage": "https://enriqueorea.github.io/dashboardApp",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "prebuild": "vite build",
+    "deploy": "gh-pages -d build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -35,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.19",
     "vite": "^2.9.9"
